WIP hero section

--- a/styles/index.css
+++ b/styles/index.css
@@ -13,3 +13,22 @@
 /* Stop purging. */
 
 /* Your own custom utilities */
+
+
+
+/* make the map full screen */
+#map {
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+  }
+  
+  /* invert the background, so the sea is white and land is black, and use brightness on each side to adjust the black and white points, and sepia to colorize it orange, and hue-rotate to change the hue to be a pale mossy blue instead of sepia orange */
+  .toner-background {
+    filter: brightness(70%) invert() sepia() brightness(30%) hue-rotate(130deg);
+  }
+  .toner-lines {
+    filter: invert() sepia() brightness(50%) saturate(210%) hue-rotate(-280deg);
+  }
+  .toner-labels {
+    filter: invert() sepia() brightness(50%) saturate(560%) hue-rotate(-220deg);
+  }
