--- a/styles/index.css
+++ b/styles/index.css
@@ -40,7 +40,20 @@
 
   .cta-button-hero-section-home {
     position: absolute;
-    bottom: 25%;
+    bottom: 20%;
     left: 50%;
     transform: translateX(-50%)
+  }
+
+  h1 {
+    font-size: 10vw;
+  }
+  h2 {
+    font-size: 4.0vh;
+  }
+  h3 {
+    font-size: 3.0vh;
+  }
+  p {
+    font-size: 2vmin;
   }
