--- a/styles/index.css
+++ b/styles/index.css
@@ -46,16 +46,19 @@
   }
 
   h1 {
-    font-size: 10vw;
+    font-size: 8vw;
   }
   h2 {
-    font-size: 4.0vh;
+    font-size: 5.0vh;
   }
   h3 {
     font-size: 3.0vh;
   }
   p {
-    font-size: 2vmin;
+    font-size: 2.5vh;
+  }
+  ul {
+    list-style-type: disc;
   }
 
 .social-snippet:last-child {
